# V-BIG

./: .gitignore  EXPERIMENT_RESULTS.md  README.md  install_dev_environment.sh  migrate_from_old_structure.py  pyproject.toml  quick_test.py  requirements.txt  setup.py
examples/: __init__.py  analyze_attributions.py  compare_models.py  train_vbig_model.py
old/: run.py
src/: create_attributions.py  dataset_artifacts_test.ipynb  run_ig.py
vbig/: __init__.py
vbig/attribution/: __init__.py  analyzer.py  core.py  losses.py
vbig/data/: __init__.py  processors.py  utils.py
vbig/evaluation/: __init__.py  analysis.py  metrics.py
vbig/training/: __init__.py  callbacks.py  trainer.py
vbig/visualization/: __init__.py  analysis_viz.py  attribution_viz.py
